name:                lxc
version:             0.1.0.0
synopsis:            High level Haskell bindings to LXC (Linux containers).
-- description:
homepage:            https://github.com/fizruk/lxc
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    LXC
    LXC.Container
    LXC.AttachOptions
    -- internal modules
    LXC.Internal.Utils
  -- other-modules:
  -- other-extensions:
  build-depends:      base          >=4.7   &&  <4.8
                    , bindings-lxc  >=0.1   &&  <0.2
