name:                lxc
version:             0.3
synopsis:            High level Haskell bindings to LXC (Linux containers).
description:         The library provides Haskell LXC API, wrapping <http://hackage.haskell.org/package/bindings-lxc bindings-lxc package>.
homepage:            https://github.com/fizruk/lxc
bug-reports:         https://github.com/fizruk/lxc/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , examples/*.hs
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    System.LXC
    System.LXC.Container
    System.LXC.AttachOptions
    -- internal modules
    System.LXC.Internal.AttachOptions
    System.LXC.Internal.Container
    System.LXC.Internal.Utils
  build-depends:      base          >=4.7   &&  <4.8
                    , bindings-lxc  >=0.2   &&  <0.3
                    , transformers  >=0.4   &&  <0.5
                    , mtl           >=2.2   &&  <2.3

source-repository head
  type: git
  location: https://github.com/fizruk/lxc.git
  branch: master
